{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 18,
  "lineage": "a0e993dc-d942-1a19-058e-1861c0a878aa",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "60000"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80",
                  "8080",
                  "0-9999"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-21T21:53:08.210-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/optimal-sun-375111/global/firewalls/test-firewall",
            "log_config": [],
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "priority": 1000,
            "project": "optimal-sun-375111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/firewalls/test-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "60000"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80",
                  "8080",
                  "0-9999"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-21T21:53:07.780-07:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/optimal-sun-375111/global/firewalls/my-firewall-rule",
            "log_config": [],
            "name": "my-firewall-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "priority": 1000,
            "project": "optimal-sun-375111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/firewalls/my-firewall-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "foo"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20221206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/asia-northeast1-a/disks/asia-northeast1-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/optimal-sun-375111/zones/asia-northeast1-a/instances/asia-northeast1-a",
            "instance_id": "5035747835111899525",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "JbewF99n9JM=",
            "metadata_startup_script": "curl -fsSL get.docker.com -o get-docker.sh; sudo sh get-docker.sh; git clone https://github.com/slogr/slogr-twamp.git;cd slogr-twamp/agent/;sudo docker compose up -d",
            "name": "asia-northeast1-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.212.210",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
                "network_ip": "10.10.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/asia-northeast1/subnetworks/terra-gcp-public-subnet-0",
                "subnetwork_project": "optimal-sun-375111"
              }
            ],
            "project": "optimal-sun-375111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/asia-northeast1-a/instances/asia-northeast1-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "foo",
              "http",
              "ssh",
              "web"
            ],
            "tags_fingerprint": "CpaQprZ7DVI=",
            "zone": "asia-northeast1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20221206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/asia-northeast3-a/disks/asia-northeast3-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/optimal-sun-375111/zones/asia-northeast3-a/instances/asia-northeast3-a",
            "instance_id": "8701770561351156100",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "JbewF99n9JM=",
            "metadata_startup_script": "curl -fsSL get.docker.com -o get-docker.sh; sudo sh get-docker.sh; git clone https://github.com/slogr/slogr-twamp.git;cd slogr-twamp/agent/;sudo docker compose up -d",
            "name": "asia-northeast3-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.101.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
                "network_ip": "10.10.4.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/asia-northeast3/subnetworks/terra-gcp-public-subnet-1",
                "subnetwork_project": "optimal-sun-375111"
              }
            ],
            "project": "optimal-sun-375111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/asia-northeast3-a/instances/asia-northeast3-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "foo",
              "http",
              "ssh",
              "web"
            ],
            "tags_fingerprint": "CpaQprZ7DVI=",
            "zone": "asia-northeast3-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20221206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/asia-south2-a/disks/asia-south2-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/optimal-sun-375111/zones/asia-south2-a/instances/asia-south2-a",
            "instance_id": "3278146569325085059",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "JbewF99n9JM=",
            "metadata_startup_script": "curl -fsSL get.docker.com -o get-docker.sh; sudo sh get-docker.sh; git clone https://github.com/slogr/slogr-twamp.git;cd slogr-twamp/agent/;sudo docker compose up -d",
            "name": "asia-south2-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.131.17.112",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
                "network_ip": "10.10.5.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/asia-south2/subnetworks/terra-gcp-public-subnet-2",
                "subnetwork_project": "optimal-sun-375111"
              }
            ],
            "project": "optimal-sun-375111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/asia-south2-a/instances/asia-south2-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "foo",
              "http",
              "ssh",
              "web"
            ],
            "tags_fingerprint": "CpaQprZ7DVI=",
            "zone": "asia-south2-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20221206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/australia-southeast2-a/disks/australia-southeast2-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/optimal-sun-375111/zones/australia-southeast2-a/instances/australia-southeast2-a",
            "instance_id": "243743026420744582",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "JbewF99n9JM=",
            "metadata_startup_script": "curl -fsSL get.docker.com -o get-docker.sh; sudo sh get-docker.sh; git clone https://github.com/slogr/slogr-twamp.git;cd slogr-twamp/agent/;sudo docker compose up -d",
            "name": "australia-southeast2-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.129.128.242",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
                "network_ip": "10.10.6.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/australia-southeast2/subnetworks/terra-gcp-public-subnet-3",
                "subnetwork_project": "optimal-sun-375111"
              }
            ],
            "project": "optimal-sun-375111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/australia-southeast2-a/instances/australia-southeast2-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "foo",
              "http",
              "ssh",
              "web"
            ],
            "tags_fingerprint": "CpaQprZ7DVI=",
            "zone": "australia-southeast2-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20221206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/us-west3-a/disks/us-west3-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/optimal-sun-375111/zones/us-west3-a/instances/us-west3-a",
            "instance_id": "5230441795016032645",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "JbewF99n9JM=",
            "metadata_startup_script": "curl -fsSL get.docker.com -o get-docker.sh; sudo sh get-docker.sh; git clone https://github.com/slogr/slogr-twamp.git;cd slogr-twamp/agent/;sudo docker compose up -d",
            "name": "us-west3-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.106.240.231",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
                "network_ip": "10.10.7.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/us-west3/subnetworks/terra-gcp-public-subnet-4",
                "subnetwork_project": "optimal-sun-375111"
              }
            ],
            "project": "optimal-sun-375111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/zones/us-west3-a/instances/us-west3-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "foo",
              "http",
              "ssh",
              "web"
            ],
            "tags_fingerprint": "CpaQprZ7DVI=",
            "zone": "us-west3-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "mtu": 0,
            "name": "terra-gcp-vpc",
            "project": "optimal-sun-375111",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-21T21:53:12.605-07:00",
            "gateway_address": "10.10.3.1",
            "id": "projects/optimal-sun-375111/regions/asia-northeast1/subnetworks/terra-gcp-public-subnet-0",
            "ip_cidr_range": "10.10.3.0/24",
            "name": "terra-gcp-public-subnet-0",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimal-sun-375111",
            "purpose": "PRIVATE",
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/asia-northeast1/subnetworks/terra-gcp-public-subnet-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-21T21:53:11.285-07:00",
            "gateway_address": "10.10.4.1",
            "id": "projects/optimal-sun-375111/regions/asia-northeast3/subnetworks/terra-gcp-public-subnet-1",
            "ip_cidr_range": "10.10.4.0/24",
            "name": "terra-gcp-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimal-sun-375111",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/asia-northeast3/subnetworks/terra-gcp-public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-21T21:53:16.271-07:00",
            "gateway_address": "10.10.5.1",
            "id": "projects/optimal-sun-375111/regions/asia-south2/subnetworks/terra-gcp-public-subnet-2",
            "ip_cidr_range": "10.10.5.0/24",
            "name": "terra-gcp-public-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimal-sun-375111",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/asia-south2/subnetworks/terra-gcp-public-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-21T21:53:15.829-07:00",
            "gateway_address": "10.10.6.1",
            "id": "projects/optimal-sun-375111/regions/australia-southeast2/subnetworks/terra-gcp-public-subnet-3",
            "ip_cidr_range": "10.10.6.0/24",
            "name": "terra-gcp-public-subnet-3",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimal-sun-375111",
            "purpose": "PRIVATE",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/australia-southeast2/subnetworks/terra-gcp-public-subnet-3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-21T21:53:09.926-07:00",
            "gateway_address": "10.10.7.1",
            "id": "projects/optimal-sun-375111/regions/us-west3/subnetworks/terra-gcp-public-subnet-4",
            "ip_cidr_range": "10.10.7.0/24",
            "name": "terra-gcp-public-subnet-4",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimal-sun-375111",
            "purpose": "PRIVATE",
            "region": "us-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/us-west3/subnetworks/terra-gcp-public-subnet-4",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-21T21:53:08.001-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/optimal-sun-375111/regions/us-central1/subnetworks/terra-gcp-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "terra-gcp-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/global/networks/terra-gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "optimal-sun-375111",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/optimal-sun-375111/regions/us-central1/subnetworks/terra-gcp-public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}